fixed : dismiss link not showing up in the Hueman Addons plugin recommendation admin notice v3.2.2 beta 1

--- a/assets/admin/css/hu_admin.css
+++ b/assets/admin/css/hu_admin.css
@@ -130,3 +130,9 @@ h1.need-help-title:before {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
+
+
+/* HUEMAN ADDONS NOTICE */
+#setting-error-tgmpa .notice-dismiss {
+  display: none;
+}
